# Windows-Store

./: HISTORY.md  LIBS.md  README.md
updater/: CMakeLists.txt  README.md  gui.ui  main.cpp  model.h  ui_dialog.h  updateapp.h  util.h
